Ajout de la fonction recolter

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -54,8 +54,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fbd070da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recolter(inventaire, fruit, quantite):\n",
+    "    if fruit in inventaire:\n",
+    "        inventaire[fruit] += quantite\n",
+    "    else:\n",
+    "        inventaire[fruit] = quantite\n",
+    "    print(f\"Récolté {quantite} {fruit} supplémentaires.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0e2b895b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Récolté 20 mangues supplémentaires.\n"
+     ]
+    }
+   ],
+   "source": [
+    "recolter(inventaires, \"mangues\", 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ab280602",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventaire des fruits :\n",
+      "- Bananes : 120 unités\n",
+      "- Mangues : 125 unités\n",
+      "- Ananas : 45 unités\n",
+      "- Noix de coco : 60 unités\n",
+      "- Papayes : 30 unités\n"
+     ]
+    }
+   ],
+   "source": [
+    "afficher_inventaire(inventaires)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85bfe17",
    "metadata": {},
    "outputs": [],
    "source": []
