Ajout de la fonction vendre

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -31,6 +31,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "fbd070da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recolter(inventaire, fruit, quantite):\n",
+    "    if fruit in inventaire:\n",
+    "        inventaire[fruit] += quantite\n",
+    "    else:\n",
+    "        inventaire[fruit] = quantite\n",
+    "    print(f\"Récolté {quantite} {fruit} supplémentaires.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "40924669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vendre(inventaire, fruit, quantite):\n",
+    "    if fruit in inventaire and inventaire[fruit] >= quantite:\n",
+    "        inventaire[fruit] -= quantite\n",
+    "        print(f\"Vendu {quantite} {fruit}.\")\n",
+    "    else:\n",
+    "        print(f\"Stock insuffisant pour {fruit}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "e6858900",
    "metadata": {},
@@ -50,21 +80,6 @@
    ],
    "source": [
     "afficher_inventaire(inventaires)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fbd070da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def recolter(inventaire, fruit, quantite):\n",
-    "    if fruit in inventaire:\n",
-    "        inventaire[fruit] += quantite\n",
-    "    else:\n",
-    "        inventaire[fruit] = quantite\n",
-    "    print(f\"Récolté {quantite} {fruit} supplémentaires.\")"
    ]
   },
   {
@@ -110,8 +125,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b85bfe17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vendu 50 bananes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "vendre(inventaires, \"bananes\", 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1acb43ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventaire des fruits :\n",
+      "- Bananes : 70 unités\n",
+      "- Mangues : 125 unités\n",
+      "- Ananas : 45 unités\n",
+      "- Noix de coco : 60 unités\n",
+      "- Papayes : 30 unités\n"
+     ]
+    }
+   ],
+   "source": [
+    "afficher_inventaire(inventaires)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02193df2",
    "metadata": {},
    "outputs": [],
    "source": []
